--- a/style.css
+++ b/style.css
@@ -1,10 +1,35 @@
 body {
-    background: url("images/galaxy.jpeg");
+    background: url("images/tt.peg.jpg");
+    background-repeat: repeat;
+    background-size: cover;
+    
     
 }
 
 .container {
-    background-color: rgb(59, 10, 59);
-    color: white;
+  background-color: rgb(59, 10, 59);
+  color: white;
+  font-weight: bolder;
+  opacity: .6;
+  height: 600px;
+  text-align: center;
+  width: 60%;
+  margin-left: 250px;
+  margin-top: 30px;
 }
+
+h1 {
+    font-size: 36;
+}
+
+#gameScreen {
+    display: none;
+}
+
+p {
+    
+    font-size: 22px;
+    
+}
+
 
