--- a/style.css
+++ b/style.css
@@ -7,19 +7,31 @@ body {
 }
 
 .container {
-  background-color: rgb(59, 10, 59);
+  /*background-color: rgb(59, 10, 59);*/
+  background-color: rgba(59, 10, 59,.6);
   color: white;
   font-weight: bolder;
-  opacity: .6;
+  /*opacity: .6;*/
   height: 600px;
   text-align: center;
   width: 60%;
   margin-left: 250px;
   margin-top: 30px;
+  border-style: groove;
+  border-color: goldenrod;
 }
 
 h1 {
     font-size: 36;
+    background-color: rgba(15, 30, 117,.7);
+    color:white;
+    text-align: center;
+    width: 40%;
+    margin-left: 370px;
+    
+    border-color: goldenrod;
+    border-style: groove;
+    
 }
 
 #gameScreen {
